# dlrover

./: .aci.yml  .codecov.yml  .gitignore  .gitmodules  .isort.cfg  .markdonwlint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  OWNERS  README.md  RELEASES.md  codecov.yml  complete_traces  experiment_plan.md  log5507  log5529  log5549  log5579  log5601  log5621  log6055  log61  main_traces  requirements.txt  setup.py  setup_internal.py  test
.github/: CODEOWNERS  pull_request_template.md
atorch/: .antflake8  .clang-format  .flake8  .isort.cfg  .pre-commit-config-internal.yaml  .pre-commit-config.yaml  OWNERS  README.md  setup.py  setup.py.tpl
atorch/dev/xpu_timer/: .bazelrc  BUILD.bazel  README.md  WORKSPACE
atorch/dev/xpu_timer/test/: test_nccl.py
atorch/dev/xpu_timer/xpu_timer/: BUILD.bazel
atorch/dev/xpu_timer/xpu_timer/common/: macro.h  manager.cc  manager.h  util.cc  util.h  xpu_timer.h
atorch/dev/xpu_timer/xpu_timer/nvidia/: BUILD.bazel  gen_nvidia_syms.sh  hook.cc  hook.h  only_keep_nv.lds
atunner/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
atunner/.github/workflows/: ci.yml
atunner/atunner/: __init__.py  __main__.py  cli.py
atunner/atunner/agents/: __init__.py
atunner/atunner/core/: __init__.py  base.py  workflow.py
atunner/atunner/kernels/: README.md  __init__.py  compiler.py
atunner/atunner/kernels/cc/: __init__.py
atunner/atunner/kernels/ops/: __init__.py  softmax.py
atunner/atunner/knowledge/: __init__.py
atunner/atunner/tools/: __init__.py
atunner/atunner/utils/: __init__.py
atunner/configs/: default.yaml
atunner/docs/: system_design.md
atunner/examples/: basic_example.py  test_cuda_toolchain.py
atunner/scripts/: setup_dev.sh
atunner/tests/: conftest.py  test_atunner.py  test_cli.py  test_init.py  test_workflow.py
atunner/tests/test_cuda/: test_cuda_basic.py  test_softmax.py
cuda_logs/: 00002-01344.stacktrace  00003-01344.stacktrace  00004-01344.stacktrace  00005-01344.stacktrace  00006-01344.stacktrace  00007-01344.stacktrace  00008-01344.stacktrace  00009-01344.stacktrace  00010-01344.stacktrace  00011-01344.stacktrace  00012-01344.stacktrace  00013-01344.stacktrace  00014-01344.stacktrace  00015-01344.stacktrace  00016-01344.stacktrace  00017-01344.stacktrace  00018-01344.stacktrace  00019-01344.stacktrace  00020-01344.stacktrace  00021-01344.stacktrace  00022-01344.stacktrace  00023-01344.stacktrace  00024-01344.stacktrace  00025-01344.stacktrace  00026-01344.stacktrace  00027-01344.stacktrace  00028-01344.stacktrace  00029-01344.stacktrace  00030-01344.stacktrace  00031-01344.stacktrace  00032-01344.stacktrace  00033-01344.stacktrace  00034-01344.stacktrace  00035-01344.stacktrace  00036-01344.stacktrace  00037-01344.stacktrace  00038-01344.stacktrace  00039-01344.stacktrace  00040-01344.stacktrace  00041-01344.stacktrace  (+1238 more)
dlrover/: Makefile  requirements.txt
xpu_timer/: BUILD.bazel  README.md  README_ZH.md  WORKSPACE.template  build.sh  config.py  version.sh  workspace.bzl
xpu_timer/config_subparsers/: __init__.py  hpu.py  nvidia.py
xpu_timer/demo/train_fsdp/: train.sh  train_fsdp.py
xpu_timer/docker/: Dockerfile
xpu_timer/experiments/: train_llama.py
xpu_timer/experiments/dlrm/: train.sh  train_dlrm.sh
xpu_timer/experiments/figs/: __init__.py  cuda_gdb_script.py  dump_driver.py  dump_timeline.py  gdb_script.py  gen_trace_timeline.py  parse_matmul.py  parse_nv_timeline.ipynb  parse_perfetto.py  run_plugin.py  stack_viewer.py  util.py
xpu_timer/experiments/fsdp/: train.sh
xpu_timer/experiments/scripts/: cc.py  layernorm_linear.py  layernorm_mlp.py  pretrain_gpt.py
xpu_timer/experiments/scripts/llama3.1/: train_llama3.1_8b.sh
xpu_timer/py_xpu_timer/: BUILD.bazel  setup.py
xpu_timer/py_xpu_timer/py_xpu_timer/: __init__.py  dlrover_parse_exception.py  dump_driver.py  dump_timeline.py  gdb_script.py  gen_trace_timeline.py  parse_matmul.py  parse_perfetto.py  run_plugin.py  stack_viewer.py  util.py
xpu_timer/py_xpu_timer/src/: py_xpu_callstack.cc
xpu_timer/test/: BUILD.bazel  common_test.cc  config.ini  test_cuda_malloc_pool.cu  test_cudamem.py  test_cudamem.sh  test_nccl.py  test_rules.bzl  test_util.py
xpu_timer/xpu_timer/common/: BUILD.bazel  bvar_prometheus.cc  bvar_prometheus.h  constant.h  generate_version.sh  logging.cc  logging.h  macro.h  manager.cc  manager.h  metrics.cc  metrics.h  metrics_test.cc  platform.cc  platform.h  signal_handler.cc  signal_handler.h  stack_util.cc  stack_util.h  util.cc  util.h  xpu_timer.cc  xpu_timer.h
xpu_timer/xpu_timer/hpu/: hook.cc  hook.h  hpu_timer.cc  hpu_timer.h
xpu_timer/xpu_timer/nvidia/: BUILD.bazel  gen_nvidia_symbols.py  hook.cc  hook.h  intercepted.cc  nvidia_dtype_util.cc  nvidia_dtype_util.h  nvidia_timer.cc  nvidia_timer.h  only_keep_nv.lds  parse_params.cc
xpu_timer/xpu_timer/protos/: BUILD.bazel  hook.proto  hosting_service.proto
xpu_timer/xpu_timer/python/: BUILD.bazel  py_syshook.c  py_tracing.c  py_tracing.h  py_tracing_data.h  py_tracing_loader.cc  py_tracing_loader.h  py_tracing_manager.cc  py_tracing_manager.h
xpu_timer/xpu_timer/server/: BUILD.bazel  hosting_service_server_client.cc  hosting_service_server_client.h  python_plugin.cc  python_plugin.h  server.cc
xpu_timer_cupti/py_xpu_timer/: BUILD.bazel
xpu_timer_cupti/py_xpu_timer/py_xpu_timer/: gen_trace_timeline.py
xpu_timer_cupti/py_xpu_timer/src/: py_xpu_callstack.cc
xpu_timer_cupti/test/: BUILD.bazel  common_test.cc  debug.md  test_hccl.py  test_rules.bzl
xpu_timer_cupti/xpu_timer/hpu/: BUILD.bazel  hpu_dtype_util.cc  hpu_dtype_util.h  hpu_timer.cc  only_keep_hpu.lds
xpu_timer_cupti/xpu_timer/nvidia/: BUILD.bazel  cupti_activity_event.cc  cupti_activity_event.h  hook.cc  hook.h  intercepted.cc  nvidia_dtype_util.cc  nvidia_timer.cc  nvidia_timer.h  only_keep_nv.lds
xpu_timer_cupti/xpu_timer/server/: BUILD.bazel  hosting_service_server_client.cc  hosting_service_server_client.h  python_plugin.cc  python_plugin.h
(+2632 files in other folders)
