# Copyright 2024 The DLRover Authors. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//test:test_rules.bzl", "linkstatic_cc_test")

linkstatic_cc_test(
    name = "common_test",
    size = "small",
    srcs = ["common_test.cc"],
    copts = ["-std=c++17"],
    data = [
        "config.ini",
    ],
    env = {
        "MY_INT_ENV_VARIABLE": "100",
        "MY_BOOL_ENV_VARIABLE": "0",
        "MY_STR_ENV_VARIABLE": "hello",
    },
    deps = [
        "//xpu_timer/common:util",
        "@googletest//:gtest_main",
    ],
)
