# Copyright 2024 The DLRover Authors. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "hosting_service_proto",
    srcs = [
        "hosting_service.proto",
    ],
    deps = ["@com_google_protobuf//:empty_proto"],
)

py_proto_library(
    name = "py_hosting_service_proto",
    srcs = [
        "hosting_service.proto",
    ],
    deps = ["@com_google_protobuf//:protobuf_python"],
)

cc_proto_library(
    name = "cc_hosting_service_proto",
    deps = [
        ":hosting_service_proto",
    ],
)

proto_library(
    name = "hook_proto",
    srcs = [
        "hook.proto",
    ],
    deps = [":hosting_service_proto"],
)

py_proto_library(
    name = "py_hook_proto",
    srcs = [
        "hook.proto",
    ],
    deps = [
        ":py_hosting_service_proto",
        "@com_google_protobuf//:protobuf_python",
    ],
)

cc_proto_library(
    name = "cc_hook_proto",
    deps = [
        ":hook_proto",
    ],
)
