package(default_visibility = ["//visibility:public"])

COPTS = [
    "-D__STDC_FORMAT_MACROS",
    "-DBTHREAD_USE_FAST_PTHREAD_MUTEX",
    "-D__const__=__unused__",
    "-D_GNU_SOURCE",
    "-DUSE_SYMBOLIZE",
    "-DNO_TCMALLOC",
    "-D__STDC_LIMIT_MACROS",
    "-D__STDC_CONSTANT_MACROS",
    "-fPIC",
    "-Wno-unused-parameter",
    "-fno-omit-frame-pointer",
    "-DGFLAGS_NS=google",
    "-DBRPC_WITH_GLOG=0",
]

cc_library(
    name = "python_plugin",
    srcs = [
        "python_plugin.cc",
    ],
    hdrs = [
        "python_plugin.h",
    ],
    deps = [
        "//xpu_timer/common:logging",
        "//xpu_timer/common:util",
        "//xpu_timer/protos:cc_hosting_service_proto",
        "@python_lib//:python",
    ],
    #alwayslink = True,
)

cc_library(
    name = "server",
    srcs = [
        "hosting_service_server_client.cc",
    ],
    hdrs = [
        "hosting_service_server_client.h",
    ],
    copts = COPTS,
    deps = [
        ":python_plugin",
        "//xpu_timer/common:logging",
        "//xpu_timer/common:util",
        "//xpu_timer/protos:cc_hosting_service_proto",
        "@apache_brpc//:brpc",
        "@apache_brpc//:bvar",
        "@boost//:process",
        "@com_github_jupp0r_prometheus_cpp//pull",
    ],
)

cc_binary(
    name = "xpu_timer_daemon",
    srcs = [
        "server.cc",
    ],
    copts = COPTS,
    linkopts = [
        "-Wl,-rpath,'$$ORIGIN/../lib/'",
    ],
    deps = [
        ":server",
        "@python_lib//:python_import",
    ],
)
