package(default_visibility = ["//visibility:public"])

cc_library(
    name = "macro",
    hdrs = [
        "common/macro.h",
    ],
)

cc_library(
    name = "util",
    srcs = [
        "common/util.cc",
    ],
    hdrs = [
        "common/util.h",
    ],
    deps = [
        "@apache_brpc//:butil",
    ],
)

cc_library(
    name = "xpu_timer",
    hdrs = [
        "common/xpu_timer.h",
    ],
)

cc_library(
    name = "manager",
    srcs = [
        "common/manager.cc",
    ],
    hdrs = [
        "common/manager.h",
    ],
    deps = [
        ":macro",
        ":util",
        "@apache_brpc//:brpc",
        "@com_github_jupp0r_prometheus_cpp//pull",
    ],
    alwayslink = 1,
)
